2008-09-14  Guillem Jover  <guillem@debian.org>

	* libcompat/compat.h (scandir): Rename arguments from select to
	filter and compar to cmp.
	* libcompat/scandir.c (scandir): Likewise.

2008-09-14  Guillem Jover  <guillem@debian.org>

	* libcompat/compat.h (alphasort): Change argument types to match
	modern system ones (the current ones were missing one indirection
	anyway).
	* libcompat/alphasort.c (alphasort): Likewise. Properly dereference
	arguments.
	* libcompat/scandir.c (scandir_comparfn): Remove static function
	variable.
	(scandir_compar): Remove function.
	(scandir): Pass compar function directly to qsort.

2008-09-14  Guillem Jover  <guillem@debian.org>

	* libcompat/strerror.c (strerror): Change string for unknown value.
	* libcompat/strsignal.c (strsignal): Likewise.

2008-09-14  Guillem Jover  <guillem@debian.org>

	* libcompat/strsignal.c (strsignal): Do not return a string for
	signal 0.

2008-09-14  Guillem Jover  <guillem@debian.org>

	* libcompat/strsignal.c (sys_siglist): Insert a NULL entry at the
	beginning.

2008-09-14  Guillem Jover  <guillem@debian.org>

	* libcompat/strsignal.c (sys_siglist): Remove array size from
	declaration. Remove unknown signal names.
	(strsignal): Use sizeof to compute the array size instead of NSIG.

2008-09-14  Guillem Jover  <guillem@debian.org>

	* libcompat/vsnprintf.c (vsnprintf): Use SEEK_SET instead of a 0
	literal on fseek.

2008-09-14  Guillem Jover  <guillem@debian.org>

	* libcompat/vsnprintf.c (vsnprintf): Change size and nr types from
	unsigled long to size_t. Always return the amount that would be
	written regardless of any truncation. Do not read one byte less from
	the temporary file.

2008-09-14  Guillem Jover  <guillem@debian.org>

	* libcompat/vsnprintf.c (vsnprintf): Use the return value from
	vfprintf as the formatted string size instead of using fstat to get
	the file size.

2008-09-14  Guillem Jover  <guillem@debian.org>

	* libcompat/vsnprintf.c (vsnprintf): Check for negative return error