@@ -1,5 +1,10 @@
 2008-09-14  Guillem Jover  <guillem@debian.org>
 
+	* libcompat/scandir.c (scandir): Handle case when filter and cmp
+	function arguments are NULL.
+
+2008-09-14  Guillem Jover  <guillem@debian.org>
+
 	* libcompat/compat.h (scandir): Rename arguments from select to
 	filter and compar to cmp.
 	* libcompat/scandir.c (scandir): Likewise.
